Construccion de header, y body. Inclusion de Font Awesome

--- a/index.html
+++ b/index.html
@@ -6,37 +6,83 @@
     <meta name="viewport" content="width=device-width,user-scalable=no">
     <meta name='mobile-web-app-capable' content='yes'>
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/fontawesome.min.css">
+    <link rel="stylesheet" href="css/solid.min.css">
+    <link rel="stylesheet" href="css/brands.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Rock's Loft - Blog</title>
 </head>
 
-<body class="nav">
+<body class="blog-body">
     <header>
-        <nav class="navbar navbar-inverse fixed-top position-sticky">
-            <img src="./img/" alt="" class="">
-        </nav>
-    </header>
-    <div class="container">
-        <div class="row">
-            <div class="jumbotron">
-                <div class="">
+        <div class="navbar fixed-top sticky-top">
+            <div class="col-12 col-md-8 col-lg-9 d-flex">
+                <a class="navbar-brand img-fluid">
+                    <img src="img/logo-rock's-loft.png" alt="Logo Rock's Loft" class="img-logo img-thumbnail float-left">
+                </a>
+                <div class="col-9 p-0 d-sm-flex">
+                    <span class="navbar-text text-white font-weight-bold">Fanáticos unidos por el rock de generaciones!</span>
                 </div>
             </div>
-            <div class="">
+            <div class="col-12 col-md-4 col-lg-3 d-flex justify-content-around fa-2x">
+                <a href="#" class="text-primary"><i class="fab fa-facebook-square"></i></a>
+                <a href="#" class="text-primary"><i class="fab fa-instagram"></i></a>
+                <a href="#" class="text-primary"><i class="fab fa-twitter-square"></i></a>
+                <a href="#" class="text-primary"><i class="fab fa-google-plus-g"></i></a>
+                <a href="#" class="text-primary"><i class="fab fa-youtube"></i></a>
             </div>
         </div>
+        <nav class="row navbar navbar-light bg-light nav-fill p-0">
+            <a class="col-12 col-sm-2 nav-item nav-link bg-primary text-primary border-bottom" href="#">Inicio</a>
+            <a class="col-12 col-sm-2 nav-item nav-link bg-primary text-primary border-bottom" href="#">Bandas</a>
+            <a class="col-12 col-sm-2 nav-item nav-link bg-primary text-primary border-bottom" href="#">Artistas</a>
+            <a class="col-12 col-sm-2 nav-item nav-link bg-primary text-primary border-bottom" href="#">Top-20</a>
+            <a class="col-12 col-sm-2 nav-item nav-link bg-primary text-primary border-bottom" href="#">Letras</a>
+            <a class="col-12 col-sm-2 nav-item nav-link bg-primary text-primary border-bottom" href="#">Canciones</a>
+        </nav>
+    </header>
+    <div class="container mt-2 bg-primary">
         <div class="row">
+            <div class="col-12 col-lg-8">
+                <div class="row">
+                    <div class="col-12 card border-0 rounded-0 pt-2">
+                        <div class="card-title text-left">
+                            <h5 class="font-weight-bold">Pearl Jam en el Rock n' Roll Hall of Fame - 28 años inspirados!</h5>
+                        </div>
+                    </div>
+                    <div class="col-12 order-md-3 order-lg-2 col-lg-6 card card-body border-0 rounded-0 p-2">
+                        <div class="card-text text-justify">
+                            Pearl Jam ya forma parte del Salón de la Fama del Rock and Roll. Además de la legendaria banda de grunge, también fueron incluidos en el selecto grupo Joan Baez, Electric Light Orchestra, Journey, Yes y el difunto rapero Tupac Shakur. El conjunto de Eddie
+                            Vedder ha sido escogido el primer año que era posible hacerlo, puesto que las normas obligan a que pasen 25 años al menos desde el disco debut del artista que opta a entrar en el prestigioso club.
+                        </div>
+                    </div>
+                    <div class="col-12 order-md-2 order-lg-3 col-lg-6 card border-0 rounded-0 p-2">
+                        <img src="img/pearl-jam-2018.jpg" alt="Pearl Jam 2018" class="img-fluid rounded">
+                    </div>
+                    <div class="col-12 order-md-4 card-text text-justify card-body card border-0 rounded-0 p-2">
+                        “Pearl Jam, ustedes son mis hermanos” dijo el guitarrista Mike McCready, agregando que Duff McKagan una vez le dijo que “uno solo es tan bueno como la gente de la que se rodea”. Eddie Vedder, por su parte, aprovechó la tribuna para dar cuenta de problemáticas
+                        sociales, señalando que “la humanidad tiene mucho que madurar todavía. El cambio climático es real. No son ‘noticias falsas’. No podemos permitirnos que las generaciones futuras miren hacia atrás y digan ‘¿Cómo es que no hicieron
+                        todo lo humanamente posible?’”.<br><br> Después de los discursos, la banda de Seattle realizó un espectáculo que demostró todas las credenciales para su inducción, con una presentación que repasó algunos
+                        de sus grandes éxitos y un homenaje al ausente Neil Young, en conjunto con miembros de Journey, Rush y Yes para reversionar Rockin’ in the Free World.
+                    </div>
+                    <div class="col-12 order-md-5 card border-0 rounded-0 p-2">
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <div class="input-group-text"><i class="fas fa-comment fa-2x"></i></div>
+                            </div>
+                            <textarea type="textarea" class="form-control" placeholder="Comenta el artículo..."></textarea>
+                        </div>
+                    </div>
+                    <div class="row">
+
+                    </div>
+                </div>
+                <div class="col-lg-4">
+
+                </div>
+            </div>
         </div>
-        <div class="row">
-        </div>
-        <div class="row">
-        </div>
-        <div class="row">
-        </div>
-        <div class="row">
-        </div>
-    </div>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="js/bootstrap.min.js"></script>
 </body>
 
 </html>
