--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <title>Rock's Loft - Blog</title>
 </head>
 
-<body class="blog-body">
+<body class="blog-body text-center">
     <header>
-        <div class="navbar fixed-top sticky-top">
+        <div class="navbar fixed-top sticky-top row">
             <div class="col-12 col-md-8 col-lg-9 d-flex">
                 <a class="navbar-brand img-fluid">
-                    <img src="img/logo-rock's-loft.png" alt="Logo Rock's Loft" class="img-logo img-thumbnail float-left">
+                    <img src="img/logo-rock's-loft.png" alt="Logo Rock's Loft" class="img-logo float-left">
                 </a>
-                <div class="col-9 p-0 d-sm-flex">
+                <div class="col-9 col-lg-12 p-0 d-sm-flex">
                     <span class="navbar-text text-white font-weight-bold">Fanáticos unidos por el rock de generaciones!</span>
                 </div>
             </div>
@@ -41,23 +41,24 @@
             <a class="col-12 col-sm-2 nav-item nav-link bg-primary text-primary border-bottom" href="#">Canciones</a>
         </nav>
     </header>
-    <div class="container mt-2 bg-primary">
+    <div class="container">
         <div class="row">
-            <div class="col-12 col-lg-8">
-                <div class="row">
+            <div class="col-12 col-md-9 col-lg-8 col-xl-8">
+                <div class="row mt-2">
                     <div class="col-12 card border-0 rounded-0 pt-2">
                         <div class="card-title text-left">
                             <h5 class="font-weight-bold">Pearl Jam en el Rock n' Roll Hall of Fame - 28 años inspirados!</h5>
                         </div>
                     </div>
-                    <div class="col-12 order-md-3 order-lg-2 col-lg-6 card card-body border-0 rounded-0 p-2">
+                    <div class="col-12 order-md-3 order-lg-2 col-lg-7 col-xl-5 card card-body border-0 rounded-0 p-2">
                         <div class="card-text text-justify">
                             Pearl Jam ya forma parte del Salón de la Fama del Rock and Roll. Además de la legendaria banda de grunge, también fueron incluidos en el selecto grupo Joan Baez, Electric Light Orchestra, Journey, Yes y el difunto rapero Tupac Shakur. El conjunto de Eddie
                             Vedder ha sido escogido el primer año que era posible hacerlo, puesto que las normas obligan a que pasen 25 años al menos desde el disco debut del artista que opta a entrar en el prestigioso club.
                         </div>
                     </div>
-                    <div class="col-12 order-md-2 order-lg-3 col-lg-6 card border-0 rounded-0 p-2">
-                        <img src="img/pearl-jam-2018.jpg" alt="Pearl Jam 2018" class="img-fluid rounded">
+                    <div class="col-12 order-md-2 order-lg-3 col-lg-5 col-xl-7 card-body card border-0 rounded-0 p-2">
+                        <img src="img/pearl-jam-2018.jpg" alt="Pearl Jam 2018" class="card-img img-fluid rounded">
+                        <p class="card-text text-justify d-none d-lg-block d-xl-none"><small class="text-muted font-italic">Pearl Jam es una banda de rock estadounidense formada en Seattle, Washington, en 1990.</small></p>
                     </div>
                     <div class="col-12 order-md-4 card-text text-justify card-body card border-0 rounded-0 p-2">
                         “Pearl Jam, ustedes son mis hermanos” dijo el guitarrista Mike McCready, agregando que Duff McKagan una vez le dijo que “uno solo es tan bueno como la gente de la que se rodea”. Eddie Vedder, por su parte, aprovechó la tribuna para dar cuenta de problemáticas
@@ -68,17 +69,83 @@
                     <div class="col-12 order-md-5 card border-0 rounded-0 p-2">
                         <div class="input-group">
                             <div class="input-group-prepend">
-                                <div class="input-group-text"><i class="fas fa-comment fa-2x"></i></div>
+                                <div class="input-group-text"><i class="fas fa-user-edit fa-2x"></i></div>
                             </div>
                             <textarea type="textarea" class="form-control" placeholder="Comenta el artículo..."></textarea>
                         </div>
                     </div>
-                    <div class="row">
-
+                </div>
+                <div class="row mt-2">
+                    <div class="col-12 card border-0 rounded-0 pt-2">
+                        <div class="card-title text-left">
+                            <h5 class="font-weight-bold">Caridad Pesada - Fundación Make Yourself creada por Incubus.</h5>
+                        </div>
+                    </div>
+                    <div class="col-12 order-md-2 order-lg-2 col-lg-5 col-xl-7 card border-0 rounded-0 p-2">
+                        <img src="img/incubus-2018.jpg" alt="Incubus 2018" class="card-img img-fluid rounded img-post">
+                        <p class="card-text text-justify d-none d-lg-block d-xl-none"><small class="text-muted font-italic">Incubus es una banda de rock estadounidense de Calabasas, California; la banda se formó en 1991.</small></p>
+                    </div>
+                    <div class="col-12 order-md-3 order-lg-2 col-lg-7 col-xl-5 card card-body border-0 rounded-0 p-2">
+                        <div class="card-text text-justify">
+                            ¿Interesado en incursionar por una buena causa? La banda americana de rock-metal Incubus lo es. Quizás mejor conocida por su cadena de éxitos a principios de la década de 2000, Incubus ha sido un elemento básico de rock estadounidense durante más de veinte
+                            años. La banda tiene un público masivo, y se reconoce su fama como una plataforma efectiva para promover el cambio social y mundial, y con motivación Incubus fundó la Fundación Make Yourself en 2003.
+                        </div>
+                    </div>
+                    <div class="col-12 order-md-4 card-text text-justify card-body card border-0 rounded-0 p-2">
+                        Desde el inicio de la Fundación, ha recaudado más de $USD 2.0 millones para varias organizaciones y causas benéficas. Las ganancias de las ventas récord de bandas, boletos de espectáculos y ventas de mercancías van directamente a la Fundación. De esta
+                        manera, Incubus conecta a sus fanáticos con las buenas obras de la organización.<br><br> Yendo más allá al conectar a los fanáticos con la caridad, Incubus alienta a los fanáticos a crear su propio perfil
+                        en el sitio web de la Fundación Make Yourself. Este perfil actúa como una herramienta de red social para los amantes de la música, así como también como un perfil de campaña de recaudación de fondos.
+                    </div>
+                    <div class="col-12 order-md-5 card border-0 rounded-0 p-2">
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <div class="input-group-text"><i class="fas fa-user-edit fa-2x"></i></div>
+                            </div>
+                            <textarea type="textarea" class="form-control" placeholder="Comenta el artículo..."></textarea>
+                        </div>
                     </div>
                 </div>
-                <div class="col-lg-4">
-
+            </div>
+            <div class="col-md-3 col-lg-4 col-xl-4 p-0 pt-2 pl-2 d-none d-sm-none d-md-block">
+                <div class="input-group">
+                    <div class="input-group-prepend">
+                        <div class="input-group-text"><i class="fas fa-search fa-lg"></i></div>
+                    </div>
+                    <input type="text" class="form-control" placeholder="Buscar por..."></textarea>
+                </div>
+                <div class="list-group">
+                    <a href="#" class="list-group-item list-group-item-action list-group-item-light">Aerosmith</a>
+                    <a href="#" class="list-group-item list-group-item-action list-group-item-light">The All-American Rejects</a>
+                    <a href="#" class="list-group-item list-group-item-action list-group-item-light">Audioslave</a>
+                    <a href="#" class="list-group-item list-group-item-action list-group-item-light">Blink 182</a>
+                    <a href="#" class="list-group-item list-group-item-action list-group-item-light">Blur</a>
+                    <a href="#" class="list-group-item list-group-item-action list-group-item-light">Bon Jovi</a>
+                    <a href="#" class="list-group-item list-group-item-action list-group-item-light">Chevelle</a>
+                    <a href="#" class="list-group-item list-group-item-action list-group-item-light">Cramberries</a>
+                    <a href="#" class="list-group-item list-group-item-action list-group-item-light">Creed</a>
+                    <a href="#" class="list-group-item list-group-item-action list-group-item-light">The Darkness</a>
+                    <a href="#" class="list-group-item list-group-item-action list-group-item-light">Def Leppard</a>
+                    <a href="#" class="list-group-item list-group-item-action list-group-item-light">Foo Figthers</a>
+                    <a href="#" class="list-group-item list-group-item-action list-group-item-light">Green Day</a>
+                    <a href="#" class="list-group-item list-group-item-action list-group-item-light">Gun's and Roses</a>
+                    <a href="#" class="list-group-item list-group-item-action list-group-item-light">The Hives</a>
+                    <a href="#" class="list-group-item list-group-item-action list-group-item-light">Incubus</a>
+                    <a href="#" class="list-group-item list-group-item-action list-group-item-light">The Killers</a>
+                    <a href="#" class="list-group-item list-group-item-action list-group-item-light">Korn</a>
+                    <a href="#" class="list-group-item list-group-item-action list-group-item-light">Limp Bizkit</a>
+                    <a href="#" class="list-group-item list-group-item-action list-group-item-light">Linkin Park</a>
+                    <a href="#" class="list-group-item list-group-item-action list-group-item-light">Metallica</a>
+                    <a href="#" class="list-group-item list-group-item-action list-group-item-light">Nickelback</a>
+                    <a href="#" class="list-group-item list-group-item-action list-group-item-light">Offspring</a>
+                    <a href="#" class="list-group-item list-group-item-action list-group-item-light">Pearl Jam</a>
+                    <a href="#" class="list-group-item list-group-item-action list-group-item-light">Radiohead</a>
+                    <a href="#" class="list-group-item list-group-item-action list-group-item-light">Rage against the machine</a>
+                    <a href="#" class="list-group-item list-group-item-action list-group-item-light">Red Hot Chili Peppers</a>
+                    <a href="#" class="list-group-item list-group-item-action list-group-item-light">Silverchair</a>
+                    <a href="#" class="list-group-item list-group-item-action list-group-item-light">Slash's Snakepit</a>
+                    <a href="#" class="list-group-item list-group-item-action list-group-item-light">Soundgarden</a>
+                    <a href="#" class="list-group-item list-group-item-action list-group-item-light">Stone Temple Pilots</a>
+                    <a href="#" class="list-group-item list-group-item-action list-group-item-light">Velvet Revolver</a>
                 </div>
             </div>
         </div>
